# Test

./: .gitignore  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-serve.txt  requirements-train.txt
.claude/: settings.local.json
.github/workflows/: cd-staging.yml  ci.yml  train.yml
docker/: Dockerfile.serve  Dockerfile.train
docs/plans/: 2026-03-03-sentiment-mlops-design.md  2026-03-03-sentiment-mlops-implementation.md
mlflow/: mlflow.env
src/data/: ingest.py  preprocess.py
src/model/: evaluate.py  train.py  tune.py
src/monitoring/: drift.py
src/serving/: app.py  schemas.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_data.py  test_model.py  test_monitoring.py  test_serving.py
